--- a/_config.yml
+++ b/_config.yml
@@ -1,14 +1,12 @@
 # Site settings
-title: Your awesome title
-email: your-email@domain.com
-description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
-baseurl: "" # the subpath of your site, e.g. /blog/
-url: "http://yourdomain.com" # the base hostname & protocol for your site
-twitter_username: jekyllrb
-github_username:  jekyll
+title: Global Digital Humanities Symposium 2017
+email: dh@msu.edu
+description: > "" # this means to ignore newlines until "baseurl:"
+baseurl: "globaldh2017" # the subpath of your site, e.g. /blog/
+url: "https://msudh.github.io/globaldh2017/" # the base hostname & protocol for your site
+twitter_username: ""
+github_username:  ""
 
 # Build settings
 markdown: kramdown
+permalink: pretty
