--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
 title: Global Digital Humanities Symposium 2017
 email: dh@msu.edu
-description: > "" # this means to ignore newlines until "baseurl:"
+description: > # this means to ignore newlines until "baseurl:"
 baseurl: "globaldh2017" # the subpath of your site, e.g. /blog/
 url: "https://msudh.github.io/globaldh2017/" # the base hostname & protocol for your site
 twitter_username: ""
