--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,11 @@
 # Site settings
-title: Global Digital Humanities Symposium 2017
+title: Global Digital Humanities Symposium
 email: dh@msu.edu
-description: > # this means to ignore newlines until "baseurl:"
-baseurl: "globaldh2017" # the subpath of your site, e.g. /blog/
-url: "https://msudh.github.io/globaldh2017/" # the base hostname & protocol for your site
-twitter_username: ""
-github_username:  ""
+description: "March 16-17 at Michigan State University"
+baseurl: ""
+url: "http://msuglobaldh.org/"
+twitter_username: "#msuglobaldh"
+#github_username:  ""
 
 # Build settings
 markdown: kramdown
